# voxelize

./: README.md
include/: Voxelize.hpp
src/: CMakeLists.txt  main.cpp
src/voxelize/: Voxelize.cpp
test/: BasicTest.cpp
